--- a/cta.html
+++ b/cta.html
@@ -9,7 +9,7 @@
     <style>
         .hero-banner {
             background:
-                /* linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.4)),  */
+                linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.4)), 
                 url('https://www.southampton.ac.uk/sites/default/files/styles/banner_extra_large/public/2020-08/undergraduate-degree-courses-finder.jpg.webp?itok=kGFBY2w8') center/cover no-repeat;
             height: 480px;
             width: 1170px;
