--- a/cta.html
+++ b/cta.html
@@ -39,7 +39,7 @@
                             <p class="mt-3">
                                 This is the place to explore your student life beyond study. Discover more about where
                                 you’ll live,
-                                our beautiful campuses, our social life, and all the things you can do when you join our
+                                our beautiful kk campuses, our social life, and all the things you can do when you join our
                                 friendly,
                                 international community.
                             </p>
