--- a/cta.html
+++ b/cta.html
@@ -43,7 +43,7 @@
                                 friendly,
                                 international community.
                             </p>
-                            <a href="#" class="btn btn-primary text-white btn-lg mt-3" style="color: #0053B3;">Visit us
+                            <a href="#" class="btn btn-primary text-white btn-lg mt-3" style="color: #0053B3;">Visit us ->
                                 &rarr;</a>
                         </div>
                         
