--- a/card.html
+++ b/card.html
@@ -46,7 +46,7 @@
             <div class="course-content">
                 <p class="text-uppercase text-muted mb-1 color: #000000" style="font-size: 14px;">Degree type</p>
                 <h4 class="mb-2" style="font-size: 18px; color: #0053B3;">Programme title</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecatro provident facilis sapiente, reiciendis delectus.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecatro provident facilis sapiente, ko reiciendis delectus.</p>
                 <hr>
                 <div class="d-flex align-items-center justify-content-between">
                     <p class="text-muted" style="font-size: 14px;">
