--- a/card.html
+++ b/card.html
@@ -50,7 +50,7 @@
                 <hr>
                 <div class="d-flex align-items-center justify-content-between">
                     <p class="text-muted" style="font-size: 14px;">
-                        Typical offer: *** | UCAS Course code: **** | Duration: # year/s
+                        Typical offer: *** | UCAS Course code: **** | Duration: # year/s ko
                     </p>
                     <a href="#" class="arrow-cta">
                         <span>&rarr;</span>
