--- a/cta.html
+++ b/cta.html
@@ -40,7 +40,7 @@
                                 This is the place to explore your student life beyond study. Discover more about where
                                 you’ll live,
                                 our beautiful  campuses, our social life, and all the things you can do when you join our
-                                friendly,
+                                friendly,kii
                                 international community.
                             </p>
                             <a href="#" class="btn btn-primary text-white btn-lg mt-3" style="color: #0053B3;">Visit us ->
