--- a/hihi.html
+++ b/hihi.html
@@ -37,7 +37,7 @@
                     <div class="relative flex-grow pl-6 pr-12 pt-5 pb-4 lg:pr-20 text-river">
                         <div class="lg:pb-10">
                             <div class="leading-none text-black font-semibold pb-2 md:text-xl">
-                               <span><h4>hiijji</h4></span> 
+                               <span><h4>hiijji1</h4></span> 
                             </div>
                             <h3 class="card-title font-bold text-xl text-endeavour md:text-2xl">Accounting and Finance</h3>
                         </div>
